# Numerical-Integration

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  clean.sh  gnuplot_call.c  lib.c  lib.h  long_time_integrate.c  main.c  simple_int.c
include/: chrono.hpp  lib.h
research/: mpi_test.sh  pthread_test.sh  run_graphics.py  script.py  script1.py  script1.sh  script2.sh
src/: Makefile  gnuplot_call.c  lib.c  long_time_integrate.c  main.c  mpi.c
tests/: gtest.cpp  test.cpp  test.sh
